# unani-clinical-assistant

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  safety_report.md
.github/workflows/: validate.yml
docs/: clinical-governance.md  doctor-workflows.md  faq.md  install.md  localization.md  privacy-deidentification.md  release-checklist.md  roadmap.md  safety.md  usage.md
examples/: deidentified-case-input.md  prompts.md
scripts/: anonymize_case.py  check_no_phi.py  generate_opd_note.py  make_skill_zip.py  validate_skill.py
skills/unani-clinical-assistant/: SKILL.md  safety-policy.md
skills/unani-clinical-assistant/examples/: sample-case-taking.md  sample-patient-handout.md  sample-referral-letter.md  sample-viva-prep.md
skills/unani-clinical-assistant/reference/: curriculum-map.md  evidence-and-references.md  red-flags.md  unani-terminology.md
skills/unani-clinical-assistant/templates/: case-sheet.md  consent-form-regimenal-therapy.md  drug-monograph.md  follow-up-note.md  opd-note.md  patient-handout.md  referral-letter.md  research-question.md  viva-prep.md
tests/: test_anonymize_case.py  test_check_no_phi.py  test_make_skill_zip.py  test_validate_skill.py
