[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "unani-clinical-assistant"
version = "0.2.0"
description = "Open-source Unani clinical documentation and education skill with safety-first templates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Unani Clinical Assistant Contributors" }
]
keywords = ["unani", "bums", "clinical documentation", "medical education", "claude skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Education"
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-q"
